apps/embeds/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: embeds
spec:
  selector:
    app: embeds
  ports:
    - port: 3000
      targetPort: 3000
